documentando o pages e corrigindo bugs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,7 @@
 site_name: GERO Cuidado Docs
 theme:
-name: material
+  name: material
 nav:
-    - Home: index.md
-    - Sobre: sobre.md
-    
-
+  - Home: index.md
+  - Sobre: sobre.md
+  - Equipe: equipe.md
